--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
+      "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.19"
   }
